--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,28 +2,44 @@
     margin: 0px;
     padding: 0px;
 }
-
-footer{
+footer {
     background-color: black;
     color: white;
     height: 80px;
     text-align: center;
 }
 
-footer p{
+footer p {
     padding-top: 3%;
 }
-.container{
+.container {
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 2%;
 }
-.section-flex{
+.section-flex {
     display: flex;
     flex-wrap: wrap;
 }
 
-h1,h2 {
-    text-align:center;
+h1, h2 {
+    text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.character {
+    width:25%;
+    margin:3%;
+    border: 2px red solid; 
+    text-align: center;
+    border-radius: 10px;
+}
+
+.character img {
+    width: 75%;
+    border-radius: 3%;
+}
+
+.info-character {
+    text-align: justify;
+    padding: 3%;
 }
